--- a/config.example.ini
+++ b/config.example.ini
@@ -2,6 +2,8 @@
 # Pre-shared API key for client authentication
 # Leave empty to disable authentication (not recommended for production)
 api_key = your-secret-api-key-here
+# Port the server will listen on (default: 5000)
+port = 5000
 
 [mastodon]
 # Your Mastodon instance URL (e.g., https://mastodon.social)
@@ -14,4 +16,6 @@ access_token = your_access_token_here
 identifier = your_username@example.com
 # App password (create one at https://bsky.app/settings/app-passwords)
 password = your_app_password_here
+# Enable debug output for Bluesky API calls (default: false)
+debug = false
 
