--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,9 @@ dependencies = [
     "flask==3.0.0",
     "flask-cors==4.0.0",
     "mastodon-py==1.8.1",
+    "pytest==7.4.3",
+    "pytest-cov==4.1.0",
+    "pytest-mock==3.12.0",
+    "pre-commit==3.6.0",
+    "ruff==0.1.15",
 ]
