--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ htmlcov/
 
 # Coverage reports
 coverage.xml
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+*.tfvars.backup
+backend.tf
+
+# Docker
+.docker/
