--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "configparser==6.0.0",
     "flask==3.0.0",
     "flask-cors==4.0.0",
+    "gunicorn==21.2.0",
     "mastodon-py==1.8.1",
     "pytest==7.4.3",
     "pytest-cov==4.1.0",
